@@ -12,10 +12,10 @@
  */
 
 
-$config['versionnumber'] = '3.22.13';
+$config['versionnumber'] = '3.22.14';
 $config['dbversionnumber'] = 360;
 $config['buildnumber'] = '';
 $config['updatable'] = true;
 $config['templateapiversion'] = 3;
-$config['assetsversionnumber'] = '30128';
+$config['assetsversionnumber'] = '30129';
 return $config;
